tests/fail/validity/uninit_raw_ptr.rs
fn main() {
    let _val = unsafe { std::mem::MaybeUninit::<*const u8>::uninit().assume_init() };
    //~^ ERROR: uninitialized
}
